--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/department/department.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/department/department.html
@@ -145,6 +145,9 @@
                 	if(currentTreeNode != null){
                 		newRow.parentId = currentTreeNode.code;
                 	}
+                	else{
+                		newRow.parentId = "";
+                	}
                 	
 					this.$refs.tableDepartment.addRow(newRow);
                 },
