--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menu.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menu.html
@@ -108,8 +108,10 @@
             },
             methods: {
                 retrieve:function() {
-                	var dataWrap=$.createAjaxDataWrap();
-                	dataWrap.setData(this.menuForm);
+                	var dataWrap=this.dataWrap;
+                	if(dataWrap==null)
+                		dataWrap=$.createAjaxDataWrap();
+                	dataWrap.data=this.menuForm;
                     $.request({
                         url: $$pageContextPath + "sys/menu/retrieve",
                         data: {
