--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menuDialog.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menuDialog.html
@@ -32,7 +32,7 @@
                 </ll-form>
             </ll-main>
             <ll-footer>
-            	<ll-form id="ajaxform" cols="1" colproportion="1:5" showchanged="True" label-width="100px" style="width:60%;">
+            	<ll-form label-width="100px" style="width:60%;">
             		<ll-form-item>
 					   <ll-button type="primary" @click="save">保存</ll-button>
 				  	   <ll-button type="text" @click="reset">重置</ll-button>
