--- a/01SOURCE/vue/vuell/src/lib/css/base.less
+++ b/01SOURCE/vue/vuell/src/lib/css/base.less
@@ -140,3 +140,12 @@
 .el-card{
   width:100%;
 }
+
+.vertical-align{
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+  
