--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/admin/bind-role.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/admin/bind-role.html
@@ -82,7 +82,7 @@ var vm = new Vue({
                 	dataWrap: this.roleAdminDataWrap,
                 },
                 success: function (response) {
-                    $.success("保存成功");
+                    $.error("保存成功");
                 }
             });
     	},
